# ChangeLog for net-fs/autofs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/ChangeLog,v 1.156 2013/08/08 06:15:00 jlec Exp $

  08 Aug 2013; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Fix USE description for libtirpc

*autofs-5.0.7-r3 (30 Jul 2013)

  30 Jul 2013; Maxim Koltsov <maksbotan@gentoo.org> +autofs-5.0.7-r3.ebuild,
  +files/autofs-5.0.7-libtirpc-link.patch,
  +files/autofs-5.0.7-parallel-make.patch,
  +files/autofs-5.0.7-respect-user-flags-and-fix-asneeded-r3.patch,
  autofs-9999.ebuild:
  1) fix broken libtirpc link error, bug #464120 2) fix occational parallel
  build error 3) fix duplicated user_patch 4) fix dmalloc deps. Thanks to Dennis
  'dlan' Lan.

  22 Jul 2013; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
  Drop Dustin from metadata.xml, make Dennis (dlan) Lan primary maintainer;
  sorted and clarified / extended descriptions.

  13 Jun 2013; Robin H. Johnson <robbat2@gentoo.org> autofs-9999.ebuild:
  Remove forced mount-locking for live ebuild.

*autofs-9999 (12 Jun 2013)
*autofs-5.0.7-r2 (12 Jun 2013)

  12 Jun 2013; Robin H. Johnson <robbat2@gentoo.org> +autofs-5.0.7-r2.ebuild,
  +autofs-9999.ebuild, +files/autofs-5.0.7-sasl-def.patch, metadata.xml:
  Update, now with proxy maintenance.

  06 May 2013; Justin Lecher <jlec@gentoo.org> autofs-5.0.7-r1.ebuild,
  +files/autofs-5.0.7-add-missing-endif-HAVE_SASL-in-modules-lookup_ldap.c.patc
  h:
  Add missing if statements for non-sasl ldap, #468606

  05 May 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Update e-mail address

  04 May 2013; Mike Frysinger <vapier@gentoo.org>
  +files/autofs-5.0.7-mount-sloppy.patch, autofs-5.0.7-r1.ebuild:
  Disable mount sloppy test since it violates the sandbox #453778 by Konstantin
  Münning.

*autofs-5.0.7-r1 (03 May 2013)

  03 May 2013; Justin Lecher <jlec@gentoo.org> +autofs-5.0.7-r1.ebuild,
  metadata.xml: