@@ -9,6 +9,6 @@ LICENSE=GPL-2 BSD
 RDEPEND=python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/pygobject:2[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/pygtk:2[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] x11-libs/gtk+:2 x11-libs/libX11 x11-libs/libXcomposite x11-libs/libXdamage x11-libs/libXfixes x11-libs/libXrandr x11-libs/libXtst csc? ( || ( >=media-video/ffmpeg-1.2.2 media-video/libav ) ) dec_av? ( || ( >=media-video/ffmpeg-1.2.2 media-video/libav ) ) opengl? ( dev-python/pygtkglext ) pulseaudio? ( media-sound/pulseaudio ) sound? ( media-libs/gstreamer media-libs/gst-plugins-base dev-python/gst-python ) vpx? ( media-libs/libvpx virtual/ffmpeg ) webp? ( media-libs/libwebp ) x264? ( media-libs/x264 || ( >=media-video/ffmpeg-1.0.4:0 media-video/libav ) ) dev-python/dbus-python[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/ipython[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/numpy[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] virtual/python-imaging[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] virtual/ssh x11-apps/setxkbmap x11-apps/xmodmap server? ( x11-base/xorg-server[-minimal,xvfb] x11-drivers/xf86-input-void x11-drivers/xf86-video-dummy ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 ) clipboard? ( || ( server client ) ) opengl? ( client ) || ( client server ) || ( python_targets_python2_6 python_targets_python2_7 )
 SLOT=0
-SRC_URI=http://xpra.org/src/xpra-0.10.0.tar.bz2
+SRC_URI=http://xpra.org/src/xpra-0.10.1.tar.bz2
 _eclasses_=distutils-r1	c1ae0d90d918406fff8ee3676a013046	eutils	63afaaed8aa819fdcb814c7cd39495a2	multibuild	c2f33b0eedd7bcfd5bc226baa8da7837	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-r1	32798682168185fa4a903cb655c89f1d	python-utils-r1	e3288ba49a9a4406c283001e4d284aad	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=17330a8e2ba2c6e0a5d2f4959b54388b
+_md5_=0ddb8b56bd59ae4c9521fbb2c2d2a81a
