@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX autofs-4.1.4-clean-up-maps.patch 1779 SHA256 e7e782016fd1af945107805eac243c0d6355b13366932c7d25447013c5a2c445 SHA512 479d6a6bf094980c73ca5f0b0bbc1321c666072d02848e7083f178b1bf93cd99ee0eea8817f9df29eddf159a792651330a2d2d4f7a35015edb535a0cb35d4938 WHIRLPOOL 0512674c720e91750e9fcba79c7dfb1d950074d8150eeacf433820018c79d52fb91221f385ad456e3c2da533d9e333a6b94f397d872cd2343b406e005a02e007
 AUX autofs-4.1.4-fix-install-ldap-samples-and-maps.patch 2645 SHA256 188e73bcee6e2a10e1b5957a59a48ba1df7af534535e84359aaffb6f3e5986e7 SHA512 937251e1e386d7aa754e68b9e5586b3dbc8e8bf072f3faf49c5e828be6f0d69e20979afeafe514189d2d91d5f898c0e888ecb51264428fadfd1e47ff3af4dabb WHIRLPOOL 6f47561e22e1806ce180589d2840b785418c52ec9ab590ff4d9e2bd9439b01f13172bc66ca402f65ced29154faf535726263edd100ba3334a67cfaa5facfc889
@@ -102,25 +102,19 @@ EBUILD autofs-5.0.6-r4.ebuild 3894 SHA256 e28b1ac232cf470e339906ac879aee000fa1d1
 EBUILD autofs-5.0.6-r5.ebuild 3621 SHA256 674564d087a7bd0199adf8eae6403a3f64df04a2b0540aab476ffde83f5d980c SHA512 2a45b83372916c2a27cce6a93a6914b5cf1d60f414ab368bb6c552b8fdecb7079274ac5e5caae7e5445bd162e373344761cfe2e548e525aa31e8793eacee9463 WHIRLPOOL 9071ebc6617754c2bca2bc4207efabf02b411a39dda86df45c819420d1fcfce2c12cace8097d0cd8bcc872dc87759ca79dc78d044bebbff70029854abb903ae8
 EBUILD autofs-5.0.7-r1.ebuild 3386 SHA256 d840a5db8dc4499989c1b585909d0f570ca1cef52e6e1ad7f76ae9a142bb9ea1 SHA512 b6c2d70af4a1435b2ace3f9bd13efa261d06f4fdb3e36663b5d976c25fd2442e639a095b2976492673bb7a38bbdb38af4bfb03c9a0e04cc30bfccab8ba987ee0 WHIRLPOOL 3e4cd336b40d68f9ba7bdaaf687ca871199b597a1103287e6ab7bf41fd28859d049c2f8464dbd9e0ee4c1bc7ece863f9feb8fb0d44a83a2d5f9d4ed403fb4696
 EBUILD autofs-5.0.7-r2.ebuild 3676 SHA256 610055e4f57707e86e59d8bdf3d7317f33e037e89a593b9cfe574560ab73e9ac SHA512 8c555bd6a3351353736628a2f645478c398748b81340087929237a4483078eb750c952dfe83202c9fce73519af4a363b76d0a37550de3b53e98c0eb3d4b2912d WHIRLPOOL 46947079452158094fdee89f30835fe017cd9af3a8ef6f5368bd913c282080dfaf9c89a63ec0119cdd49a0102f73b297f04584dcca03fa918208a5e4f542f6bd
-EBUILD autofs-5.0.7-r3.ebuild 3776 SHA256 b3e3af61e777e191570bdf168b45dedc7bd5a4915af4f0ec58136f9e116d5528 SHA512 2b6300b24edce2366ff13814fd4f1db096099257b3c62950a67e4ff9495be12037d60dfe03b4c8791d0603a60243730bb3794b3c68ec95ee97ba3288d295ceda WHIRLPOOL da1096983a326951af14f8153f83dd8ec8386718d1228a5fd57ee34deab61057f69a4da1f90f353167e17056fdcffaddb5f1d5e321727e59727b1d0821fae5e6
+EBUILD autofs-5.0.7-r4.ebuild 3815 SHA256 52559e39bbb65cc9f10fe2f75cdf6bb053e2b809eca6ac06f496930e7ee157c3 SHA512 9b8d66d3fe7a6f702a0e251f0c52ba0e95ad5b19d6d9b173ca014d3c788c5491fb388f904f73615d735b78732d87d175e3e8c96f5fab2c06d9efff790f1b2c2d WHIRLPOOL 0c2d7f8f5c772578786e2700b168b5c10cf22b5f31f23604d6608dbcaa407a0b155185c119190528955c2b7356b904800463a6eaaa5347927f00dad970366518
 EBUILD autofs-5.0.7.ebuild 3709 SHA256 5c1988d743b9ac6805a3af576d4799940b326a80869033b70946b77e732917b9 SHA512 971376c69990158d8e4c7c9e258f54f60a931cc76e380dd4ef9fd868ec49f6843b1be32ef483fbd24cc6175a8af47f3d38be08feb8f0169d6ddb554bf221a32c WHIRLPOOL 153a9746f65ccdb9437122be405e79b4ef863eca483e928d73bfaf4434ebfb813f07211ad7ac0d4dcf0832129d1bb41344248ddbfe56b1da0d085bdb408c8319
 EBUILD autofs-9999.ebuild 2661 SHA256 0f57328e15a431c850c93052065ce241b7033bf86cb390818c63fc9dd931b76b SHA512 21fea0aecb109b5e018ea0ca0b565328d213ddb5827ac0344a3e957a38d5812e57d3cec87af36b8a00133cee7d2b98a8ff3408d4538bbddb529a7a2b5ade0c3a WHIRLPOOL 2c1df787ff26959c08d20c38964342ccab5a93d00de6a5fd14150d73c685f63386d81ab5c880d59a38696a6193ee055e0665d66fb9788f3e2eb5dc050371a42f
-MISC ChangeLog 26506 SHA256 35f9cab04c23630d4c13a78c4bea376dc95dfb0561476e31627a332ef5d05c32 SHA512 0785ea7eee46eb62030b6a8aa6df70584bac9586817f6bb628d00b0f6574801884f530d8f8c4d17a9ac91585c26b9cb2960f32828a73e6cc7d8d0f6a2a5064fa WHIRLPOOL 754d723c4ed1dca59c95f7350f632b2a0dc0774c9fc432aa081247a553770ad4ef43e36f4fa1ecf85062108ee266e0d573a95175b84e53a5305a6e8f21574e29
+MISC ChangeLog 26864 SHA256 446546f80d57f685885223f95982c6d58843877d3149d162ca4faf7d407e575f SHA512 6d1e43475ac3483f43b34cf4c7cc4e504c643f4629ca123fdb361ae0623c9822a3ff985dcd50c51402109842623b2596b0a7b6062367741ed267d6f1f8b6f335 WHIRLPOOL 360a493538eef0d0fb6a4d067f5d71db24e6b567a64915095537bee725e0f0e3c5f04da0754eb91fa84c0e63268d4044f6aa2e39073292ea591eb5ed05695a92
 MISC metadata.xml 1171 SHA256 f82860a595d726d4fb63ae594fbde0db698cfed34ee93ac58da49e83680c1188 SHA512 6215b9b7b709efa124a59bf816ace33ce9ad81abfd1c2f0976781c18bd1075ec9e7394d1b9d47b686992462c82da586e247a9551f232e3e20472ec7d2e049e19 WHIRLPOOL 5f470354c4d7e5e887bc9bf94a8290e948bfd30e6165901de0795a51e98b90dd05b8f98ac4100754ba57ec5837d5c39d4395547c779f35ba9fa897560fcee95a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSAzdZAAoJELnU8jG9FVirRUIQAIS30OzM9OeHr1N5oinlWmmJ
-atYYroSbhnPpWMFLole7tlYjUsu3iJT1VSDN4bCb0fPa0zwrqLgsWXOZBUZGAJvc
-tyUq1QiVs2SMCmCqbtH22gOpszGi0lidiIplQAgGJBQLszPxl4qb26UJVFRjYUPl
-JA5lT1iU8U+1rIj3PLCPe1nlQXSU30iOU+OD77ghJe6Q8jRqaYMWi2KL8CIiULAK
-aR6YjeQPpi5+ZFzs8q9FCR0PVDTzxA0wnkjHCnIGr9IMZmDZ4WOu5HBIJVZVBkWp
-bJfEvZ3ja0GiYRaFQbXjQL4Zi+4eLyPz0+1OxPnLXhPw8Frx9TFlaOM5DdYcFShU
-40dH6qn9rUwOtUwt2orC1EJz0TojVGDpuGjEmh23JFmAnf+NSUBGeaE/20dkRwjU
-gpxKSJmUHWS3i6B5/Ej/AazP+8ehb6V/TZIKEvlPNZiy+IO+j1bqkaJ4Tbx2jDo6
-nCzmv77+O7bL2AsdBjJpNyU27U0oo4mUIaTOxKQ2sFUyVkTHgWIoXyfM+8K3frmf
-GY2VUpetofMw6v18SrDAOv6MktCaqS85IHUsTo/F2wbYT1kIHCP0aVXCw2ecfhpF
-FVjJapni9Zg6h87kUtcpXETMqvsfRvCRuv26wJLHMENbIodELoChSjhs5OQ3hLPW
-5Ry0PPRBgg1Xi962Lo2U
-=bqtE
+iQEcBAEBCAAGBQJSFbTCAAoJECo/aRed92678k0H/i1Rbfx53U9CrTAzECn7z8K7
+2hGV6T+ykZAMVniYEGuzXgZHBa7sTgeX1gDHMm/g1Iu342qoZKouXan5HE18lYlL
+AO38gMVvVNaImSN3h4dSUH45hbJ/NwGL9Hkm6DTF2T1P3lpOmF0jFWx1MkvQdqv5
+IWDTiVkKbmzxqeMJBdkWEc27kQU8ScNv59qSCOPPxuk3MtbDwgQ/6W/NE895d+x0
+JLisofa1PtzdDO83wqzuYwT9wdC4xhIo0ZuVMgK3OS2f2DoqLqoKu4i+iDmhu8cA
+xf6AXbjRacIBiubDoh6Goc9T0kZJEpj8ikxg9XKOTrfiMsXPLcX3Wdeim/B/uBM=
+=HZKV
 -----END PGP SIGNATURE-----
