@@ -7,19 +7,21 @@ AUX xpra-0.8.0-prefix.patch 463 SHA256 5c05c47154751e68ea91a3988d17baa06a027370b
 AUX xpra-0.9.5-PIL.patch 4196 SHA256 8e3e9a52a3f2b4721b8980768fbac47c13493631fa6245bba873837f2e23969c SHA512 a247b14526d59e9b10c2ce27545e71f149dec9bc45c50b50840e7ddc524aaca0e25b6e322e55a90992626c2fc1eaf161d70f69a491f62afbee3372212ce70b34 WHIRLPOOL ab14c618adb6b1de786f9cc8d794d8074466bbc77065b65a75281dfb4058a22e948851dfd3587847511bebf412e05780183f68b154545974d9c4bde0606901c3
 AUX xpra-0.9.5-opengl-auto.patch 2168 SHA256 69c20c7557af0b4ab532ae505307ef2c28965e66df03a5f9ce91b9015b707a05 SHA512 72f3d5919802d90bec63f9ab927c19a896b5e17d322832bf130b1b8202452e796b93c653cc0c7293a8e1c535e28738cc0d1b21891d5c788f222e4e79265bf910 WHIRLPOOL ef90c6ca9188e8a647987a685d8aecce895bc36addc90240536929fc9bbf22332fbccb14a4a5309e389eab5b2924009c397973d9d09101d8854e19ebec435e8f
 DIST xpra-0.10.0.tar.bz2 690365 SHA256 ba03da512a8aefdaef1614d4f0a55792bb96df9be96195ac541279c3835b6577 SHA512 dc45d8bf8f0fac06c6326de70e1daba336274641099d53f3d2ec41dc9cc8909595195f4d84a89a1c0eae2f0028b20d0d2d9a2da558f52a1caaef4b5c49e9c8b3 WHIRLPOOL e4ff2b7b576ff396f4e6248a71ec8fb1f0f4ecbe9a307d8ac1d72767dbe9ca8e7e1997323a38bd3e4c1569a6604720dc932346f2e022e5b5f42b507cdda4a0d3
+DIST xpra-0.10.1.tar.bz2 690626 SHA256 19a3e69c27ebbd88cd7e7d08ebc0188da28ca4b2dc5cd8f03378c9dc2a5ccb82 SHA512 2869bfc6102d4be7257dd1ebb3e597a0507a9cbb1884a97bc4f5ab68cc72d1c798fa334a52f06e1714a7a2d67a9a6c82f4a611a99ade6d2f9404e4a89df436a1 WHIRLPOOL 4ead5517378d2dd14d3b52afcb4afecf1325cd31ded7940438d91c2b7952935065f6884cb7b99f9f324cb6dca5e5a7bedd95454aa9c4f4d2391965d511f69249
 DIST xpra-0.7.8.tar.bz2 471147 SHA256 27f5d0bc2a369a93076ef90fad46a6354e0327033b9139b659d602e9e32c17cb SHA512 d14fdd75c7fd494f4aaae8740ce1a5a7880ae70109ffa7989d346d1b5add56a8117a5851132140f2e8a3aad0f7f3f4a9fe6e2b2f3e9666e469f35fc179fd0af2 WHIRLPOOL c0ed83f90ade9b3a7b0ab728ab090d73277fecb56edc4943295fa19f211b3e41c12dcad6eec9b01932c0a2bb1a6402f8f88deaf25c7f88be01fcf986778c4fd0
 DIST xpra-0.8.8.tar.bz2 581029 SHA256 248bac50c78eccfbc7f728667f9d0ef26b101b288193fa286881cda452e63683 SHA512 b3d2121c13e293cca466997af1b49069ced0012c6692cfac375e9990d62efc916b44f2641a4e9c5e04e425d19c14e85e1521ae1832aa3ea02fcc46ac29672a63 WHIRLPOOL b1f654542e8e89ce89ffb6fac9ee3a42f0c88e6d9ce0fdc1573b28c0b117e970f7e96484eadf7552c35e6dd3064f37495a4eb2cdb1c51c2dc0a8ded8877ba321
 DIST xpra-0.9.8.tar.bz2 607316 SHA256 6c33f2da404209158a4684d26365bac56c77d3f158b95710a482e3a813178884 SHA512 324eeb09a2f948ded76a6cb53180ee68dedbce1c9f11736475e43551f9f27cb09949f1f8c1cdc1f5eb5000070a73e58593fac74d7ca3e24d2ddbc69bdf57d70e WHIRLPOOL 77dc3f3e27e1914d4691eb08247d1025a42d438167db178e59a3befdab44c8c02618f46968f5805af886aafb0129c1461a4843cd753f79d10e4bd9c4a07eeb9a
-EBUILD xpra-0.10.0.ebuild 2809 SHA256 b8c2d5cdf35f40167ff205ff26eed5fe4a83453e9f0efb922fcc7cb29a53b348 SHA512 185f7a090e9f1160990bbe06471e60308498b0c211aa87b138277f8862c9339de9fe8f03ee853f449b6edac2038fea4b9607dcf2fbbe24be18a3ceb2cf10f93e WHIRLPOOL 1b3ed2e29238fcc4fd7dcef2428f09befde02178c690aff3c68b737431fd5eb063c47e521b7064c0012e4b0d61aeda6c4bfa4d94b3b7a75ac96ed46a21225e44
+EBUILD xpra-0.10.0.ebuild 2830 SHA256 4221d98255a925d6a57bfc28425398018ae7b9b48ddc78d60bb11417a94833e8 SHA512 b7b93c9b933e6c85a997f4e23f0cf3c54eed11358d9f8817172458442e5a67dd4d42947468e208e61358df0311c3fa47382f2b5b16669d550c46145994331a7d WHIRLPOOL ebf4d3116d2508cc56ed3b0804821e8cbf416648f1439fb26412a95796d0ede98c0707b95b1c6488ac2d31ef4b7507666e2b58d1ff749a362468c9f2030b8d91
+EBUILD xpra-0.10.1.ebuild 2830 SHA256 c83c9a5092d49b05637a1f7179dcbd6364970bebabcd03513b8d97f25bd45285 SHA512 273636203f748f18da11e96a85f8198de58a0e5980108b2c19e6fe325a0373c8a05be700f3d1e18b70d44d8e86e6e72f3300a7e8bb2d99d6fbdfe7682ce3317e WHIRLPOOL 40cab326029fabe2f2caccbb911640d14871a631ef455ca8b19a9fe40019e6887fe9df72349b4568310c2f0cc9e64ddc912864f2a4b39ab6038b6ffc9c6bef50
 EBUILD xpra-0.7.8.ebuild 2520 SHA256 be7b5830ac406d6021ae56feee6549bf1e78f3623109c55d95b55b284bd2fbf3 SHA512 9a94a50c0e4f111e333b4545dbcbfd7b54e24e132e40bf57ab9aab881ea2e45127df71f84341fa5eed8e0aef1a6395861759881e537c97586ff9783c664f9838 WHIRLPOOL 1d00d061266bbd8935d37403a470a863af628127fe23b96ab258ab5595c0e9ad28bc7d7f3f011583b211c3758e320ce6c3c9f2f81e3a7424a753620f841769f5
 EBUILD xpra-0.8.8.ebuild 2263 SHA256 72bd40980609937092391960f5962683b3ec77304a76f902ba3a9b3dd6b8ffdd SHA512 c609633d6fbb8e3971b589646f3ad010698270287e68bb735df19294600ee893f00f6841495d703bf0dd642d26965a10a8a4f84158e1422c4228b6d16ebcc52c WHIRLPOOL 794fe466f3bd64e1739abaa54bd822b2b0d65c86b2eeb8c19e583a54bd41058159d1a771f8d0a36b602889057941a0cd2edbc7d8133118758a38560411a79030
 EBUILD xpra-0.9.8.ebuild 2646 SHA256 d56daad0cdd0ca7a07c98058e95e4a3f447e3866f9af6346782f7062285d6180 SHA512 b768650888ccbf9cbf2f6a2f5bb6e1bcab350d0111e33b178cca75fe80a0bd264ff1abbc1767d573ea0cc93edff6929a2db656360183a15d0618266c379dac49 WHIRLPOOL a57eb703e69b601e4e00506c9fb5cec605879dfa93c8b2b5d91c12f5c1f4dc6ae3b943e3551b44e92d178b264187748c38c09bd0cc8e3baa5010026011eac4e7
-MISC ChangeLog 11428 SHA256 6c4d5531f9e04dcafc978209ecb2e8623fc588c37655bd946fbf2168ae2f3fea SHA512 02703a26ea563a8b13039025ff5f56f9a3d287e0cb9c43533b1da8c5a1d9f946496aeac7923f1e49af8369637637953c0b66c01d9347928c061308894d592258 WHIRLPOOL 902a5e857f43349bf55e6dffdddc7c32ec98ff6fe47cb7f0dccc6303f984a5621f7a64b69ecd6677d108f0fb2972b4a38c676814e044163caa373f10fe529ca5
+MISC ChangeLog 11561 SHA256 f0f6cadb007e27da197d5476d3ead8417651b871d2983f6d7257fbe24d151bed SHA512 8265a8ddf9132c4c9e284c86863895ba2888563a58939e0fea389f5dc8f2bcde070c8945d549602af6007e0cd78d399b94201b445f4b8b8103c7988db6522a3b WHIRLPOOL dff372208002f66a8a1fc9c9bcdcde35a1e263e9a21e6fcddfaad20b751f04bada50dbd24035814928f51031b3b9cd2bb459c1ccd8b3c9b3bbef8d9f36cfb85f
 MISC metadata.xml 750 SHA256 520a2fa41f7d77740b88be12b182f4eb4bbd38b2e8fcbc7e3b6fee104febe4d6 SHA512 3a8bcebe6a9c51100166601bdbdfab2cd67c455ef1f549ce3014dd2a17109273ba7849bdf70ae2077d48cb957b2f7a27e9d6213017fec6db6a5ef509985d8281 WHIRLPOOL cfd580b41e3eec89c58a7b6da0788b61906f91dd673eccd2b9b0219edbb328780cd6294958fb68f52e0dfffdf52c60d9454dd02dfd996644b9b2e2ca3014edd0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlIOfPQACgkQknrdDGLu8JBRqQD+OlkysuYUV3UP/fVmdn7c35Mn
-Aijx3vfltiWT2rAVGW8A/R385WgQXfGOvu6U1zl3juqhfRB6YDwRuKxYKzjIOA4f
-=9ypy
+iF4EAREIAAYFAlIVs7AACgkQknrdDGLu8JAU8AD/br29Kkfk13dzfB01IgohoJSc
+2uKoUb3jWfzdHAuVFQUBAJbZhy4mOJXWSBOJFBWAb3Y0U7EsuhvRQLPx4Qx/w3fF
+=YeWs
 -----END PGP SIGNATURE-----
