@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/xpra-0.10.0.ebuild,v 1.3 2013/08/22 06:46:07 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/xpra-0.10.1.ebuild,v 1.1 2013/08/22 06:46:07 xmw Exp $
 
 EAPI=5
 
