@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/xpra
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.78 2013/08/16 19:26:43 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.79 2013/08/22 06:46:07 xmw Exp $
+
+*xpra-0.10.1 (22 Aug 2013)
+
+  22 Aug 2013; Michael Weber <xmw@gentoo.org> +xpra-0.10.1.ebuild,
+  xpra-0.10.0.ebuild:
+  Version bump
 
   16 Aug 2013; Michael Weber <xmw@gentoo.org> metadata.xml, xpra-0.10.0.ebuild:
   Required use, add gtk+:2 dep. Building against gtk+:3 or qt4 doesn't work.
